# ADAM

./: CLAUDE.md  README.md  pyproject.toml
src/: data_aggregation.py  main.py
src/.ipynb_checkpoints/: BP_RF-checkpoint.py  RF_model-checkpoint.py
src/ancillary/: glass.py  soil_moisture.py  soilgrids.py  terraclimate.py  test_glass_url.py
src/bnpp/: ForC_data.py  GherardiSala_data_2020.py  grassland_data.py
src/landcover/: Olson_2001.py  biomes.py  bioregions.py
src/models/: AutoGluon_model.py  COMPREHENSIVE_MODEL_BENCHMARK.md  CatBoost_model.py  DeepEnsemble_model.py  ElasticNet_model.py  LightGBM_model.py  MLP_model.py  RF_model.py  Ridge_model.py  SVM_model.py  TabNet_model.py  TabPFN_model.py  XGBoost_model.py
src/models/application/: apply_MLP_globally.py  apply_RF_globally.py  apply_XGBoost_globally.py  global_bnpp_predictions.nc  global_bnpp_predictions_mlp.nc  global_bnpp_predictions_xgb.nc
src/models/autogluon/: autogluon_model_leaderboard.txt  autogluon_model_summary.txt
src/models/catboost/: catboost_model_summary.txt
src/models/deep_ensemble/: deep_ensemble_summary.txt
src/models/elasticnet/: en_model_summary.txt
src/models/lightgbm/: lgb_model_summary.txt
src/models/mlp/: mlp_model_best_summary.txt
src/models/random_forest/: rf_model_summary.txt
src/models/ridge/: ridge_model_summary.txt
src/models/svm/: svm_model_summary.txt
src/models/tabnet/: tabnet_model_summary.txt
src/models/tabpfn/: tabpfn_model_comprehensive_summary.txt  tabpfn_model_summary.txt
src/models/xgboost/: xgb_model_summary.txt
