[project]
name = "adam"
version = "0.1.0"
description = "Agentic Data Aggregation and Modelling - TAM benchmark pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.6.0",
    "cartopy>=0.21.0",
    "xarray>=2023.1.0",
    "h5py>=3.8.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "rasterio>=1.3.0",
    "netcdf4>=1.6.0",
    "pyhdf>=0.11.6",
    "pyproj>=3.7.1",
    "torch>=2.7.1",
    "xgboost>=3.0.2",
    "chardet>=5.2.0",
    "gdal==3.11.0",
    "h5netcdf>=1.6.3",
    "lightgbm>=4.6.0",
    "pytorch-tabnet>=4.1.0",
    "tabpfn>=2.1.0",
    "catboost>=1.2.0",
    "autogluon-tabular>=1.1.0",
    "geopandas>=1.1.1",
    "shapely>=2.1.1",
]
